<resources>
    <string name="app_name">Президенты США</string>
    <string name="action_settings">Настройки</string>
    <string name="action_call">Звонок другу</string>
    <string name="action_cheat">50/50</string>
    <string name="number_of_choices">Кол-во вариантов ответа</string>
    <string name="number_of_choices_description">Отображать 2, 4, 6 или 8 вариантов ответа</string>
    <string name="results">%1$d guesses, %2$.02f%% correct</string>
    <string name="question">Вопрос %1$d из %2$d</string>
    <string name="title_activity_settings">Настройки</string>

    <string name="permission_explanation">Ну очень надо</string>
    <string name="ok">Ок</string>

    <string name="abraham_lincoln">Авраам Линкольн</string>
    <string name="andrew_jackson">Эндрю Джексон</string>
    <string name="dwight_eisenhower">Двит Эйзенховер</string>
    <string name="franklin_d_roosevelt">Фраклин Д. Рузвельт</string>
    <string name="george_washington">Джордж Вашингтон</string>
    <string name="harry_s_truman">Гарри С. Трумэн</string>
    <string name="james_k_polk">Джеймс К. Полк</string>
    <string name="theodore_roosevelt">Теодор Рузвельт</string>
    <string name="thomas_jefferson">Томас Джеферсон</string>
    <string name="woodrow_wilson">Вудроу Вилсон</string>
    <string name="title_activity_result">Результаты</string>
    <string name="result_message">Ваш реузльтат</string>
    <string name="high_scores_label">Результаты:</string>
    <string name="save_results_btn">Сохранить</string>
    <string name="input_name">Введите имя</string>
</resources>
