<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.vlad.quiz.MainActivity">
    <item
        android:icon="@drawable/ic_settings_black_24dp"
        android:id="@+id/action_settings"
        android:orderInCategory="150"
        android:title="@string/action_settings"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_call_black_24dp"
        android:id="@+id/action_phone"
        android:orderInCategory="100"
        android:title="@string/action_call"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_lightbulb_outline_black_24dp"
        android:id="@+id/action_cheat"
        android:orderInCategory="50"
        android:title="@string/action_cheat"
        app:showAsAction="always"/>
</menu>
